<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context="az.codeacademy.codeacademy.ProfileActivity">

    <RelativeLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/scanbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">


        <ImageView
            android:id="@+id/header_cover_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="centerCrop"
            android:src="@drawable/images"
            app:srcCompat="@drawable/images" />

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"

            android:id="@+id/profile"
            android:layout_width="150dp"
            android:layout_height="150dp"

            android:layout_alignTop="@+id/logoutbtn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="22dp"
            android:clickable="true"
            android:elevation="5dp"
            android:padding="20dp"
            android:scaleType="centerCrop"
            android:src="@drawable/lll"
            app:civ_border_color="#FFFFFFFF"
            app:civ_border_width="3dp" />

        <RelativeLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/logoutbtn"
            android:layout_marginTop="43dp"
            android:background="#2E363F"
            android:elevation="4dp"
            android:paddingBottom="24dp">


            <TextView
                android:id="@+id/namesurname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="70dp"
                android:text="@string/name_surname"
                android:textColor="#fff"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/group_Schedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/group"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/group_schedule"
                android:textColor="#fff"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/namesurname"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/group_000"
                android:textColor="#fff"
                android:textSize="18sp" />
        </RelativeLayout>


        <LinearLayout
            android:id="@+id/LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_layout"
            android:layout_margin="5dp"
            android:layout_marginTop="5dp"
            android:background="#fff"
            android:elevation="4dp"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lessonTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lessontime"
                android:textSize="20sp"
                android:textStyle="bold" />


        </LinearLayout>

        <ImageView
            android:id="@+id/logoutbtn"
            android:layout_width="64dp"
            android:layout_height="64dp"

            android:layout_alignEnd="@+id/LinearLayout"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="18dp"
            android:clickable="true"
            android:src="@drawable/logout" />


    </RelativeLayout>

    <ImageView
        android:id="@+id/scanbtn"
        android:layout_width="@android:dimen/notification_large_icon_width"
        android:layout_height="@android:dimen/notification_large_icon_height"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:src="@drawable/cameraqr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/attd"
        android:layout_width="@android:dimen/notification_large_icon_width"
        android:layout_height="@android:dimen/notification_large_icon_height"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:clickable="true"
        android:src="@drawable/listbtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>
